--- a/html/lab3.html
+++ b/html/lab3.html
@@ -19,34 +19,43 @@ and open the template in the editor.
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae amet ducimus cupiditate iusto doloremque harum cumque omnis repellendus, reiciendis eaque.
         <img src="image/img.jpg" alt="obraz" width="200" height="400" aligin="left" />
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, modi, consectetur. Eveniet magnam labore, eius saepe reiciendis soluta similique laudantium est obcaecati qui voluptatem illo natus pariatur ipsum hic, corporis totam cumque dolorem iste, sint accusamus. Id quia labore quod, commodi excepturi perspiciatis quaerat iste non eos, qui consequuntur laudantium?</p>
-    <table border="2" cellpadding="10" cellspacing="10">
+    <table width="800px" height="500px" border="2" cellpadding="5" cellspacing="10">
+        <!--
         <thead>
             nagałowek
         </thead>
         <tbody>
             Lorem ipsum.
         </tbody>
+-->
 
         <tr>
             <td>tekst1</td>
             <td>tekst2</td>
-            <td rowspan="2">tekst3</td>
+            <td valign="bottom" rowspan="3">tekst3</td>
             <td>tekst4</td>
             <td>tekst5</td>
         </tr>
         <tr>
+            <td valign="top">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </td>
+            <td valign="bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </td>
             <td colspan="2"></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+
         </tr>
         <tr>
+            <td align="right">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, consequuntur.</p>
+            </td>
             <td></td>
+            <td>
+                <p align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, reiciendis.</p>
+            </td>
             <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+
         </tr>
     </table>
 </body>
