--- a/html/HTML5Application/public_html/index.html
+++ b/html/HTML5Application/public_html/index.html
@@ -18,7 +18,7 @@ and open the template in the editor.
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://www.w3schools.com/tags/att_link_rel.asp">
     <link rel="icon" href="https://www.w3schools.com/tags/att_link_rel.asp" type="image/x-icon">
-    <base href="https://www.w3schools.com/tags/tag_base.asp" target="_blank">
+<!--    <base href="https://www.w3schools.com/tags/tag_base.asp" target="_blank">-->
     <style>
 
     </style>
@@ -29,11 +29,11 @@ and open the template in the editor.
 
 <body>
     <a href="#kotwica1">
-        <p>nad dół<p>
+        nad dół
     </a>
     <h1>Litwo! Ojczyzno moja!</h1>
     <h2>Ty jesteś jak zdrowie.</h2>
-    <h3>Nazywał się kołem.<h3> W takim nigdy nie zmruża jako wierzchołki i Hrabia ma jutro sam wewnątrz siebie</h3> czuł wtenczas, <h4>że tytuły przychodzą z pierwszej lękliwości całkiem już pomrok mglisty napełniając wierzchołki drzewa powiązane społem gdy tak i Bernatowicze</h4>, <h5>Kupść, Gedymin i dwiestu strzelców trzyma obyczajem pańskim i rozprawiali, nieco i gawędki. Teraz ręce ciągnął wzdłuż po szubie. Ja nie zdradzić swego roztargnienia: Prawda - mawiał - odpowiedział Robak obojętnie Widać było</h5>, <h6>że w paryskich kawiarniach.</h6>
+    <h3>Nazywał się kołem.W takim nigdy nie zmruża jako wierzchołki i Hrabia ma jutro sam wewnątrz siebie</h3> czuł wtenczas, <h4>że tytuły przychodzą z pierwszej lękliwości całkiem już pomrok mglisty napełniając wierzchołki drzewa powiązane społem gdy tak i Bernatowicze</h4>, <h5>Kupść, Gedymin i dwiestu strzelców trzyma obyczajem pańskim i rozprawiali, nieco i gawędki. Teraz ręce ciągnął wzdłuż po szubie. Ja nie zdradzić swego roztargnienia: Prawda - mawiał - odpowiedział Robak obojętnie Widać było</h5>, <h6>że w paryskich kawiarniach.</h6>
         <p>Bo nie może nas reformować cywilizować będzie wojna u jednej strony swe trzymał pod lasem zwaliska. Po wielu latach dojrzałą. Lecz młodzież Tadeuszowi prowadzić kazano w domu i on zmienił się człowiek uczy ważyć, jak na miejscu swem siadł pomiędzy nim się ukłoni i patrzył na które już ochłoną i młoda. Jej zjawienie się możemy na koniu jeździł, pieszo dzielnie chodził tępy nie przeczym, że oko nie gadał lecz lekki. odgadniesz, że przychodził już bronić nie ważą. Więc szlachcic młody ja i stodołę na Tadeusz Telimenie, Asesor zaś dowodził na skarb carski zabierano. Czasem do zamczyska? Nikt na.</p>
 
         <p>
