add table to .education

--- a/html/cv/HTML5Application1/public_html/index.html
+++ b/html/cv/HTML5Application1/public_html/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Zbigniew Ostapowicz</title>
-    <link href="https://fonts.googleapis.com/css?family=Oswald&amp;subset=latin-ext" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Saira+Condensed&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -40,59 +39,129 @@
         </aside>
         <main>
             <section class="aboutMe">
-                <h1><i class="fas fa-user"></i>dane osobowe</h1>
-                <h2>imię: zbigniew</h2>
-                <h2>nazwisko: Ostapowicz</h2>
-                <h2>data urodzenia: 17.03.1985</h2>
-                <h2>adres: białystok</h2>
-                <h2>doświadczenie: 2007->obecnie-pracownik obługi klienta </h2>
-                <h2>motto życiowe: "Talk is cheap. Show me the code"(Linus Torvalds)</h2>
+                <div class="web">
+                    <img src="img/aboutMe.jpg" alt="cv">
+                </div>
+                <div class="about">
+                    <h1>Dane osobowe</h1>
+                    <table>
+                        <tr>
+                            <td>
+                                <h2>Imię: Zbigniew</h2>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <h2>Nazwisko: Ostapowicz</h2>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <h2>Data urodzenia: 17.03.1985</h2>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <h2>Adres: Białystok</h2>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <h2>Doświadczenie: 2007->obecnie-pracownik obługi klienta, świadczący usługi dla
+                                    potentata paliwowego. Kierownik zmiany oraz Były trener </h2>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
 
             </section>
             <section class="education">
-                <h1><i class="fas fa-graduation-cap"></i>wykształcenie</h1>
+                <div class="web">
+                    <img src="img/education.jpg" alt="students">
+                </div>
+                <div class="about">
+                    <h1>wykształcenie</h1>
 
-                <ul>
-                    <li>
-                        <h2>2000->2005: technikum agrobiznesu-ukonczone z wyróżnieniem</h2>
-                    </li>
-                    <li>
-                        <h2>2005->2008: wyższa szkoła zarządzania nieruchomosciami, kierunek ekonimia</h2>
-                    </li>
-                    <li>
-                        <h2>2008->2011: wyższa szkoła finansów i zarzadzania, kierunek finanse i rachunkowość</h2>
-                    </li>
-                    <li>
-                        <h2>2018->obecnie: politechnika białostocka, kierunek front-end developer</h2>
-                    </li>
-                </ul>
+                    <ul>
+                        <li>
+                            <h2>2000->2005: technikum agrobiznesu-ukonczone z wyróżnieniem</h2>
+                        </li>
+                        <li>
+                            <h2>2005->2008: wyższa szkoła zarządzania nieruchomosciami, kierunek ekonimia</h2>
+                        </li>
+                        <li>
+                            <h2>2008->2011: wyższa szkoła finansów i zarzadzania, kierunek finanse i rachunkowość</h2>
+                        </li>
+                        <li>
+                            <h2>2018->obecnie: politechnika białostocka, kierunek front-end developer</h2>
+                        </li>
+                    </ul>
+                </div>
             </section>
             <section class="skills">
-                <h1><i class="fas fa-certificate"></i>Umiejetnosci</h1>
-                <table>
-                    <tr>
-                        <td>
-                            <h2>html</h2>
-                            <div class="htmlBar">
+                <div class="web">
+                    <img src="img/skills.jpg" alt="skills">
+                </div>
+                <div class="about">
+                    <h1>Umiejetnosci</h1>
+                    <h2>HTML</h2>
+                    <div class="container">
+                        <div class="skill html">90%</div>
+                    </div>
 
-                                <div class="htmlBarColor">
-                                    <p>80%</p>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
+                    <h2>CSS</h2>
+                    <div class="container">
+                        <div class="skill css">80%</div>
+                    </div>
 
-
-
-
-                </table>
-
-
-
+                    <h2>JavaScript</h2>
+                    <div class="container">
+                        <div class="skill js">65%</div>
+                    </div>
+                    <h3>Pozostałe umijetnośći:</h3>
+                    <ul>
+                        <li>Znajomość systemu kontroli wersji GIT</li>
+                        <li>Znajomość preprocesora SASS</li>
+                        <li>Znajomość GULP-a</li>
+                        <li>Podstawy web designu i projektowania makiet</li>
+                        <li>podtsawy SEO</li>
+                        <li>Doświadczeńie z pracą w grupie i kontaktach z kilientami</li>
+                    </ul>
+                </div>
+            </section>
+            <section class="slogan">
+                <div class="bg">
+                    <h1>Moje życiowe motto</h1>
+                    <p>Talk is cheap. Show me the code</p>
+                    <p class="author">Linus Torvalds</p>
+                </div>
             </section>
         </main>
-        <footer>
+        <section class="contact">
+            <h1>Skontaktuj się ze mną</h1>
+            <div class="wrap clearfix">
 
+                <form>
+                    <input type="text" placeholder="Twoje imię">
+                    <input type="text" placeholder="Email">
+                    <textarea placeholder="Twoja wiadomość"></textarea>
+                    <button>Wyślij wiadomość</button>
+                </form>
+                <div class="socials">
+                    <div class="social clearfix"><img src="img/contact1.png" alt="kontakt"><span>mail@domena.pl</span></div>
+                    <div class="social clearfix"><img src="img/contact2.png" alt="kontakt"><span>654654654</span></div>
+                    <div class="social clearfix"><img src="img/contact3.png" alt="kontakt"><span>adamnowak</span></div>
+                    <div class="social clearfix"><img src="img/contact4.png" alt="kontakt"><span>@adamnowak</span></div>
+                    <div class="social clearfix"><img src="img/contact5.png" alt="kontakt"><span>adamnowak</span></div>
+
+                </div>
+
+            </div>
+
+
+        </section>
+        <footer>
+            &copy2019 Zbigniew Ostapowicz
         </footer>
     </div>
     <script src="main.js"></script>
