--- a/html/cv/HTML5Application1/public_html/index.html
+++ b/html/cv/HTML5Application1/public_html/index.html
@@ -20,7 +20,30 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Saira+Condensed&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "Person",
+            "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "Białystok",
+                "addressRegion": "Podlasie"
+            },
+            "image": "img/photo1.png",
+            "jobTitle": "Pracowmik obsługi klienta",
+            "name": "Zbigniew Ostapowicz",
+            "birthPlace": "Białystok",
+            "birthDate": "1985.03.17",
+            "gender": "male",
+            "nationality": "Polish",
+            "worksFor": "PKN ORLEN",
+            "alumniOf": {
+                "@type": "CollegeOrUniversity",
+                "name": "WSFiZ W Białymstoku",
+                "sameAs": "http://www.wsfiz.edu.pl/"
+            }
+        }
+    </script>
 </head>
 
 <body>
@@ -74,8 +97,8 @@
                         </tr>
                         <tr>
                             <th>Doświadczenie:</th>
-                            <td>2007->obecnie-pracownik obługi klienta, świadczący usługi dla potentata paliwowego.
-                                Kierownik zmiany oraz Były trener
+                            <td>2007-obecnie-pracownik obługi klienta, świadczący usługi dla potentata paliwowego.
+                                Kierownik zmiany oraz Były trener szkolący nowych pracowników.
                             </td>
                         </tr>
                     </table>
@@ -150,15 +173,15 @@
             <h1>Skontaktuj się ze mną</h1>
             <div class="wrap clearfix">
 
-                <form>
+                <form name="myform" action="mailto:zbynioo85@gmail.com" method="post" enctype="text/plain">
                     <label for="name">imię</label>
-                    <input id="name" type="text" placeholder="Twoje imię">
+                    <input name="name" type="text" placeholder="Twoje imię">
                     <label for="email">email</label>
-                    <input id="email" type="email" placeholder="Email" required>
+                    <input name="email" type="email" placeholder="Email" required>
                     <label for="tele">telefon</label>
-                    <input id="tele" type="tel" placeholder="Numer kontaktowy">
+                    <input name="tele" type="tel" placeholder="Numer kontaktowy">
                     <label for="textare">wiadomość</label>
-                    <textarea id="textare" placeholder="Twoja wiadomość" required></textarea>
+                    <textarea name="textare" placeholder="Twoja wiadomość" required></textarea>
                     <input id="checkbox" type="checkbox" required>
                     <label for="checbox">Zgoda na przetwarzanie danych osobowych</label>
                     <button>Wyślij wiadomość</button>
