--- a/html/cv/HTML5Application1/public_html/index.html
+++ b/html/cv/HTML5Application1/public_html/index.html
@@ -175,17 +175,18 @@
 
                 <form name="myform" action="mailto:zbynioo85@gmail.com" method="post" enctype="text/plain">
                     <label for="name">imię</label>
-                    <input name="name" type="text" placeholder="Twoje imię">
+                    <input id="name" type="text" placeholder="Twoje imię">
                     <label for="email">email</label>
-                    <input name="email" type="email" placeholder="Email" required>
+                    <input id="email" type="email" placeholder="Email" required>
                     <label for="tele">telefon</label>
-                    <input name="tele" type="tel" placeholder="Numer kontaktowy">
-                    <label for="textare">wiadomość</label>
-                    <textarea name="textare" placeholder="Twoja wiadomość" required></textarea>
+                    <input id="tele" type="tel" placeholder="Numer kontaktowy">
+                    <label for="textarea">wiadomość</label>
+                    <textarea id="textarea" placeholder="Twoja wiadomość" required></textarea>
+                    <label for="checkbox">checkbox</label>
                     <input id="checkbox" type="checkbox" required>
-                    <label for="checbox">Zgoda na przetwarzanie danych osobowych</label>
+                    <span class="agree">Zgoda na przetwarzanie danych osobowych</span>
                     <button>Wyślij wiadomość</button>
-
+                    
                 </form>
                 <div class="socials">
                     <div class="social clearfix"><img src="img/contact1.png" alt="kontakt"><span>mail@domena.pl</span></div>
